--- a/server/build.gradle
+++ b/server/build.gradle
@@ -26,6 +26,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
+	compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.15'
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-security")
